# beanbeaver-ios

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  PRIVACY.md  README.md  THIRD_PARTY_NOTICES.md  build-xcframework.sh  sim-shot.sh
.github/workflows/: ios-build.yml
BBReceiptKit/: Package.swift
BBReceiptKit/Sources/BBReceiptKit/: ReceiptScanner.swift
BeanBeaver/BeanBeaver/: AcknowledgementsView.swift  BatchImportView.swift  BeanBeaverApp.swift  BundledDocumentView.swift  ContentView.swift  DataDump.swift  DataDumpView.swift  DebugInfoListView.swift  DebugInfoStore.swift  DocumentScanner.swift  Entitlements.swift  FilesLedgerInbox.swift  GitHubDeviceFlow.swift  GitHubLedger.swift  Keychain.swift  LaunchScreen.storyboard  LaunchTiming.swift  LedgerExport.swift  LedgerSettingsView.swift  MoneyManagerExport.swift  MoneyManagerWorkbook.swift  PrivacyInfo.xcprivacy  ReceiptBatch.swift  ReceiptCaptureStore.swift  ReceiptPipeline.swift  Theme.swift  ZoomableImageView.swift
BeanBeaver/BeanBeaver.xcodeproj/: project.pbxproj
BeanBeaver/BeanBeaver.xcodeproj/xcshareddata/xcschemes/: BeanBeaver.xcscheme
BeanBeaverScan/BeanBeaverScan/: BeanBeaverScanApp.swift  ContentView.swift  DataDump.swift  FilesLedgerInbox.swift  GitHubDeviceFlow.swift  GitHubLedger.swift  Keychain.swift  LedgerExport.swift  LedgerSettingsView.swift  PhotoSaver.swift  ReceiptPipeline.swift  Theme.swift
BeanBeaverScan/BeanBeaverScan.xcodeproj/: project.pbxproj
BeanBeaverScan/BeanBeaverScan.xcodeproj/xcshareddata/xcschemes/: BeanBeaverScan.xcscheme
scripts/: README.md  compare-e2e.py  device-e2e.sh  device-latency.py  launch-timing.sh  sim-e2e-private.sh  sim-e2e.sh
tests/receipts_e2e/: costco_20260218_redact.expected.json  costco_20260218_redact.expected.json.template  costco_20260301_redact.expected.json
