[package]
name = "beanbeaver-ios-ffi-build"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]
# v0.2.0 adds portable-receipt-identity: ReceiptResult now carries
# beanbeaver_id/document_relpath and scans emit real `document:` metadata. After
# bumping, rerun ./build-xcframework.sh to regenerate the Swift glue + xcframework.
bb-receipt-ffi = { git = "https://github.com/Endle/beanbeaver-core", tag = "v0.2.0" }
# `cli` provides uniffi_bindgen_main() for the local src/bin/uniffi-bindgen.rs,
# which build-xcframework.sh runs to generate the Swift glue. Keep the version in
# step with the uniffi that bb-receipt-ffi pulls in (0.28).
uniffi = { version = "0.28", features = ["cli"] }
