[package]
name = "beanbeaver-ios-ffi-build"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]
# v0.3.0 adds per-item semantic tags: ReceiptItem now carries `tags: [String]`
# (the beanbeaver-internal multi-tag classification the app's category display
# reads from). v0.2.0 added portable-receipt-identity (beanbeaver_id/
# document_relpath + real `document:` metadata). After bumping, rerun
# ./build-xcframework.sh to regenerate the Swift glue + xcframework.
bb-receipt-ffi = { git = "https://github.com/Endle/beanbeaver-core", tag = "v0.3.1" }
# `cli` provides uniffi_bindgen_main() for the local src/bin/uniffi-bindgen.rs,
# which build-xcframework.sh runs to generate the Swift glue. Keep the version in
# step with the uniffi that bb-receipt-ffi pulls in (0.28).
uniffi = { version = "0.28", features = ["cli"] }
