[package]
name = "beanbeaver-ios-ffi-build"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]
# v0.3.0 adds per-item semantic tags: ReceiptItem now carries `tags: [String]`
# (the beanbeaver-internal multi-tag classification the app's category display
# reads from). v0.2.0 added portable-receipt-identity (beanbeaver_id/
# document_relpath + real `document:` metadata). v0.3.2 is parser/field-extraction
# robustness + item-classifier/merchant-family rule fixes (no FFI/API change).
# v0.3.3 DOES change the FFI surface: parse-only entry point, rule overlays,
# per-field confidences, and reformat (plus receipt-core/ocr-paddle refactors).
# v0.4.0 adds the size-prior banner merchant extractor (behavior) and a new
# `OcrDetection` record + `ReceiptResult.detections` (raw OCR boxes for the
# headless batch dump / snapshot diffing).
# After bumping, rerun ./build-xcframework.sh to regenerate the Swift glue + xcframework.
bb-receipt-ffi = { git = "https://github.com/Endle/beanbeaver-core", tag = "v0.4.0" }
# `cli` provides uniffi_bindgen_main() for the local src/bin/uniffi-bindgen.rs,
# which build-xcframework.sh runs to generate the Swift glue. Keep the version in
# step with the uniffi that bb-receipt-ffi pulls in (0.28).
uniffi = { version = "0.28", features = ["cli"] }
